--- a/index.html
+++ b/index.html
@@ -3,11 +3,47 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <script src="javascript.js" defer></script>
   <title>Calculator</title>
 </head>
 <body>
   <div class="container">
-    
+    <div class="row" id="displayContainer">
+      <p id="display">DISPLAY</p>
+    </div>
+
+    <div class="row">
+      <button class="row-item number" id="7">7</button>
+      <button class="row-item number" id="8">8</button>
+      <button class="row-item number" id="9">9</button>
+      <button class="row-item" id="bracketLeft">(</button>
+      <button class="row-item" id="bracketRight">)</button>
+    </div>
+  
+    <div class="row">
+      <button class="row-item number" id="4">4</button>
+      <button class="row-item number" id="5">5</button>
+      <button class="row-item number" id="6">6</button>
+      <button class="row-item" id="multiply">x</button>
+      <button class="row-item" id="divide">/</button>
+    </div>
+  
+    <div class="row">
+      <button class="row-item number" id="1">1</button>
+      <button class="row-item number" id="2">2</button>
+      <button class="row-item number" id="3">3</button>    
+      <button class="row-item" id="plus">+</button>
+      <button class="row-item" id="minus">-</button>
+    </div>
+
+    <div class="row">
+      <button class="row-item" id="0">0</button>
+      <button class="row-item" id="dot">.</button>
+      <button class="row-item" id="neg">(-)</button>
+      <button class="row-item" id="clear">C</button>
+      <button class="row-item" id="equal">=</button> 
+    </div>
   </div>
 </body>
 </html>
