--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
       <button class="row-item number" id="4">4</button>
       <button class="row-item number" id="5">5</button>
       <button class="row-item number" id="6">6</button>
-      <button class="row-item" id="multiply">x</button>
-      <button class="row-item" id="divide">/</button>
+      <button class="row-item operation" id="multiply">x</button>
+      <button class="row-item operation" id="divide">/</button>
     </div>
   
     <div class="row">
       <button class="row-item number" id="1">1</button>
       <button class="row-item number" id="2">2</button>
       <button class="row-item number" id="3">3</button>    
-      <button class="row-item" id="plus">+</button>
-      <button class="row-item" id="minus">-</button>
+      <button class="row-item operation" id="add">+</button>
+      <button class="row-item operation" id="subtract">-</button>
     </div>
 
     <div class="row">
-      <button class="row-item" id="0">0</button>
-      <button class="row-item" id="dot">.</button>
+      <button class="row-item number" id="0">0</button>
+      <button class="row-item number" id="dot">.</button>
       <button class="row-item" id="neg">(-)</button>
       <button class="row-item" id="clear">C</button>
       <button class="row-item" id="equal">=</button> 
