--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@800&family=Roboto:wght@900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
   <script src="javascript.js" defer></script>
   <title>Calculator</title>
@@ -17,8 +20,7 @@
       <button class="row-item number" id="7">7</button>
       <button class="row-item number" id="8">8</button>
       <button class="row-item number" id="9">9</button>
-      <button class="row-item" id="bracketLeft">(</button>
-      <button class="row-item" id="bracketRight">)</button>
+      <button class="row-item" id="delete">Del</button>
     </div>
   
     <div class="row">
@@ -26,7 +28,7 @@
       <button class="row-item number" id="5">5</button>
       <button class="row-item number" id="6">6</button>
       <button class="row-item operation" id="multiply">x</button>
-      <button class="row-item operation" id="divide">/</button>
+      <button class="row-item operation" id="divide">&divide</button>
     </div>
   
     <div class="row">
