Appears to be fully complete, will continue testing for bugs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="row">
       <button class="row-item number" id="0">0</button>
       <button class="row-item number" id="dot">.</button>
-      <button class="row-item" id="neg">(-)</button>
+      <button class="row-item operation" id="neg">(-)</button>
       <button class="row-item" id="clear">C</button>
       <button class="row-item" id="equal">=</button> 
     </div>
